# Deberta-cls

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  convert_to_onnx.sh  docker-compose.yaml  download_data.py  download_model.py  mlflow.db  pyproject.toml
.dvc/: config
bot/: .gitignore  Dockerfile  bot.py  rag_engine.py  requirements.txt
configs/: config.yaml
configs/data/: data.yaml
configs/model/: model.yaml
configs/tokenization/: tokenization.yaml
data_store/: .gitignore  test.csv  test.csv.dvc  train.csv.dvc
mlruns/0/: meta.yaml
mlruns/757209595513525597/: meta.yaml
mlruns/757209595513525597/0b14f340e4e340b99271f01aa11b553d/: meta.yaml
mlruns/757209595513525597/0b14f340e4e340b99271f01aa11b553d/metrics/: epoch  lr-AdamW  train_loss  val_loss  val_map3
mlruns/757209595513525597/0b14f340e4e340b99271f01aa11b553d/tags/: mlflow.runName  mlflow.source.name
mlruns/757209595513525597/0b3a44473dd94c418a91eca9a23e0c0f/: meta.yaml
mlruns/757209595513525597/4650ed1efd1e4cc4960b20d6bbbe35a0/: meta.yaml
mlruns/757209595513525597/520b4bd5d8af49fe9a699ea98e5dc6bd/: meta.yaml
mlruns/757209595513525597/81161fea69db42bba072de7b3babf94f/: meta.yaml
mlruns/757209595513525597/d0bebf2833d8458190d85a7908d1939c/: meta.yaml
mlruns/757209595513525597/fddaae4e62be449189298059bdd8366a/: meta.yaml
models/: .gitignore
notebooks/: notebook-bert.ipynb
pl_scripts/: .gitignore  convert_ckpt_to_hf.py  mlflow.db  pl_data.py  pl_infer.py  pl_model.py  pl_train.py
scripts/: infer.py  preprocess.py  train.py
scripts/mlruns/0/: meta.yaml
triton/my_bert_mc/: config.pbtxt
(+48 files in other folders)
