[tool.poetry]
name = "sci_checked_bot"
version = "0.1.0"
description = "repo for mlops project at mipt with llm answers checking"
authors = ["mdr333@mail.ru"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.3.25"
numpy = ">=2.2.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
torch = ">=2.6.0,<3.0.0"
lightning = ">=2.5.0.post0,<3.0.0"
datasets = ">=3.3.2,<4.0.0"
transformers = ">=4.49.0,<5.0.0"
pre-commit = ">=4.1.0,<5.0.0"
hydra-core = ">=1.3.2,<2.0.0"
accelerate = ">=1.5.2,<2.0.0"
mlflow = ">=2.21.3,<3.0.0"
dvc = ">=3.59.1,<4.0.0"
faiss-cpu = ">=1.11.0,<2.0.0"
langchain-community = "^0.3.24"
langchain-mistralai = "^0.2.10"
python-telegram-bot = "^22.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
